[package]
name = "nitro_sniper"
version = "0.1.0"
authors = ["Jviguy <jviguytwo2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.1"
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
ansi_term = '0.12.1'
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
